Addressed code style warnings